<resources>
    <string name="app_name">AlbertSomeTask</string>
    <string name="label_name">Name</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_country">Country</string>
    <string name="label_postal_code">Post Code</string>
    <string name="label_street">Street</string>
    <string name="label_email">Email</string>
    <string name="label_age">Age</string>
    <string name="label_dob">Date Of Birth</string>
    <string name="label_phone">Phone</string>
    <string name="label_cell">Cell</string>
    <string name="label_gender">Gender</string>
</resources>